Fix for bug #8464 (AVG returns incorrect result)

Actually problem was not in AVG function, but in SUM before the AVG in the
query.